<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="top.lc951.sample16.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sample16_1:AABB包围盒"
            android:onClick="sample16_1"
            />
           <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sample16_2:AABB包围盒-旋转"
            android:onClick="sample16_2"
            />
          <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sample16_3:穿透效应"
            android:onClick="sample16_3"
            />
          <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sample16_4：粒子系统-CPU"
            android:onClick="sample16_4"
            />
          <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sample16_5：粒子系统-GPU"
            android:onClick="sample16_5"
            />
          <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sample16_6：弹簧质点模型"
            android:onClick="sample16_6"
            />

        </LinearLayout>

</android.support.constraint.ConstraintLayout>
